--- a/src/pages/blog/articleDetail/articleContent.scss
+++ b/src/pages/blog/articleDetail/articleContent.scss
@@ -32,6 +32,11 @@
 
 .ant-layout-content {
     flex: none;
+
+    .showMore {
+        display: block;
+        text-align: center;
+    }
 }
 
 /*对 markdown 样式的补充*/
@@ -112,4 +117,55 @@ p img {
 
 :-webkit-any(article, aside, nav, section):-webkit-any(article, aside, nav, section) h1 {
     font-size: 1.17em;
+}
+
+.sub-comment {
+    background-color: #fafbfc;
+    padding: 10px;
+}
+
+.sub-comment-showmore {
+    display: inline-block;
+    width: 100%;
+    background-color: #fafbfc;
+    padding: 2px 20px 2px 2px;
+    text-align: right;
+}
+
+.comment-action {
+    padding-left: 8px;
+    cursor: 'auto';
+}
+
+// .ant-comment-inner {
+//     .ant-comment-actions {
+//         opacity: 0;
+//     }
+
+// }
+
+// .ant-comment-inner:hover {
+//     .ant-comment-actions {
+//         transition: all 0.2s linear 0s;
+//         opacity: 1;
+
+//     }
+// }
+.reply-input {
+    // margin-left: 20px;
+    margin: 5px 0;
+}
+
+.ant-comment-inner {
+    padding: 10px 0;
+}
+
+[class*='-col-rtl'] .comment-show-reply {
+    display: block !important;
+}
+
+
+[class*='-col-rtl'] .comment-action {
+    padding-right: 8px;
+    padding-left: 0;
 }
